# velvet-python

./: .env.example  .python-version  CLI.py  Cazzy_LearningLab.py  LICENSE  LICENSE.md  README.md  __init__.py  contributions.md  gitignore  makefile  pre-commit-config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  secrets.baseline
.github/workflows/: ci.yaml  ci.yml
01-environments/: app.py
01-environments/src/: benchmarks.py  config_loader.py  dependency_analyzer.py
data/: Health_Data.xlsx  October_2024.xlsx  PMC4351276_cleaned.txt  Supplement_Research_Links.csv  about.md  amd.csv  clean_loan2.csv  count.csv  doctor_patient_llm_balanced.csv  extracted_text.txt  healthcare_access_demographics_clean.csv  individual_health_data_comprehensive.json  keno_results_full.csv  llm_balanced_train_tfidf.json  postnatal_data_no_date.csv  updated_keno_data.csv  worldbank_women_disease_symptoms.csv
data/our_world_data/: monthly-reported-cases-of-influenza-like-illnesses.csv  mpox-cumulative-confirmed-and-suspected-cases.csv  weekly-reported-cases-of-acute-respiratory-infections.csv
docs/: learning-path.md  why-velvet.md
dos/: index.md
environments/: mkdocs.yml  readme.md
environments/src/: environment_manager.py
pyfiles/: Fibonacci_plus_six_ways.py  book_data_report.py  caz_flashcard_quiz_game.py  cazzy_bashwild.sh  duel_game.py  generate_calculus_notes.py  geopandas_six_ways.py  glyphkraftgame.py  lead_appliance_repair_demo.py  lead_data_scientist_portfolio.py  linear_regression.py  logistic_regression_demo.py  logistic_regression_ombre.py  logs_and_exponents_game.py  matplotlib_interactive.py  matrix_chain_four_ways.py  multi_api_report.py  multiple_regression_commentary.py  ncoins_six_ways.py  odyssey_game.py  ombre_folium_walkthrough.py  py_built_ins_companion.py  py_mastery.py  python_lessons_suite.py  random_module_walkthrough.py  readme_game.py  recursion_masterclass.py  statistics_module_walkthrough.py  subplot_walkthrough.py  variable_atlas.py
pyfiles/linear regression/: LR_How.py
pyfiles/more/: Contract_Processing.py  QuadraticsLab.py  cheap_travel_flights.py  interactive_travel_dash.py  invoice_processing_framework.py  luxury_car_analysis.py  nfl_advanced_dashboard.py  nfl_superdashboard.py  pricing_api_framework.py  pricing_framework.py  pricing_production_framework.py  quadratics.py  survivor_analysis.py  survivor_stats.py
pyfiles/test_files/: Lab3.py  access.py  advanced_periodic_visuals.py  cazandra_aporbo_lab2.py  class_5.py  convert_k_to_Rakine.py  create_periodic_tbl.py  create_updated_source_doc.py  custom_data_integration.py  data_integration.py  data_integration_fixed.py  fibonacci_sequence.py  filter_age_new_files.py  generate_appliance_repair_data.py  harvard_health_extraction_v2_combined.py  healthcare_questions_exporter.py  healthcare_questions_processor.py  misdiagnosed_conditions_collector.py  open_extracted.py  parse_ethnicity_new_files.py  quadratics_test.py  sorting_2.py  sorting_practice.py  swp.py  tickets.py  transform_new_files_to_jsonl.py
pyfiles/test_files/debug/: data_check_hipaa.py  data_inspect_export.py  data_inspect_export_errors.py  generate_mixed_sample_data.py  generate_sample_data.py  handling_file_loading.py  test1.py
scripts/: advanced_imports.py  check_headers.py  exploratory_python_demo.py  exploratory_sankey.py  more_advanced_imports.py  my_import_ encyclopedia.py  py_environment_builder.py  py_environment_builder_v2.py  python_portfolio_demo.py  python_portfolio_demo2.py  sankey_toolkit_titanic.py  ultimate_python_envo_tester.py  ultimate_python_installer.py
scripts/games/: backpropagation_adventure.py  chaotic_space_adventure.py  codequest.py  pattern_recognition.py  recursive_thinking.py
src/: __init__.py  ai.py  data_utils.py  init_real.py  ml_pipeline.py  test_data_utils.py
test/:  test_dummy.py  conftest.py  init.py  test_basic.py  test_cli.py
tests/: baby_name.py  generate_500_advanced_tests.py  generate_500_tests.py  generate_ai_test.py  generate_student_stats.py  make_hschool_students_name.py  test_ai.py  test_benchmark.py  test_benchmark_performance.py  test_example.py  test_ml_pipeline.py  test_pipeline_integration.py
